# Multi-Segment-File-Transfer

./: .index  CMakeCache.txt  CMakeLists.txt  Makefile  Multi-Segment-File-Transfer  README.md  client  client.c  client.h  cmake_install.cmake  file_1  file_2  file_3  file_4  file_6  file_utilities.c  file_utilities.h  netio.c  netio.h  server  server.c  server.h
TEST_SERVER/: file  filee
TEST_SERVER/DIR2/: file2
TEST_SERVER/DIR2/DIR21/: file21
